--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-simplemde-editor": "^4.1.3",
     "showdown": "^1.9.1",
     "simplemde": "^1.11.2",
     "uuid": "^8.3.0"
@@ -38,6 +39,7 @@
     ]
   },
   "devDependencies": {
-    "concurrently": "^5.2.0"
+    "concurrently": "^5.2.0",
+    "esm": "^3.2.25"
   }
 }
