--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "lodash": "^4.17.19",
     "react": "^16.13.1",
@@ -40,6 +41,7 @@
   },
   "devDependencies": {
     "concurrently": "^5.2.0",
-    "esm": "^3.2.25"
+    "esm": "^3.2.25",
+    "morgan": "^1.10.0"
   }
 }
