--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "srv": "nodemon -r esm server/app.js",
+    "serve": "concurrently \"yarn start\" \"yarn srv\""
   },
   "eslintConfig": {
     "extends": "react-app"
