--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "3.4.1",
     "react-simplemde-editor": "^4.1.3",
     "showdown": "^1.9.1",
+    "simple-git": "^2.17.0",
     "simplemde": "^1.11.2",
     "uuid": "^8.3.0"
   },
