--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "cors": "^2.8.5",
+    "dayjs": "^1.8.32",
     "express": "^4.17.1",
     "lodash": "^4.17.19",
     "react": "^16.13.1",
