--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dayjs": "^1.8.32",
     "express": "^4.17.1",
     "fuse.js": "^6.4.1",
+    "highlight.js": "^11.0.1",
     "lodash": "^4.17.21",
     "react": "^16.13.1",
     "react-device-detect": "^1.13.1",
