update instrall scripts for deployment

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "srv": "nodemon -r esm server/app.js",
+    "postinstall": "npm run build",
     "serve": "concurrently \"yarn start\" \"yarn srv\""
   },
   "eslintConfig": {
